changed underline for [] to highlight the composition

--- a/aula1/index.html
+++ b/aula1/index.html
@@ -100,8 +100,8 @@
 		<section>
 			<div class="content">
 				<p>O uso de &lt; &gt;, ao redor do elemento, define uma <em>tag</em>. Tags, geralmente, são compostas por um par de abertura e fechamento.</p>
-				<p>A abertura de tag marca o começo daquele elemento. Composta de <em>menor que</em> + <em>nome do elemento</em> + <em>maior que</em></p>
-				<p>O fechamento de tag encerra esse mesmo elemento. É composto de <em>menor que</em> + <em>barra</em> + <em>nome do elemento</em> + <em>maior que</em></p>
+				<p>A abertura de tag marca o começo daquele elemento. Composta de [menor que] + [nome do elemento] + [maior que]</p>
+				<p>O fechamento de tag encerra esse mesmo elemento. É composto de [menor que] + [barra] + [nome do elemento] + [maior que]</p>
 				<p>Tudo que for escrito dentro dessas tags será o conteúdo dela, então, para criar uma tag de link (a), escreve-se:</p>
 				<code>
 					&lt;a&gt; html &lt;/a&gt;
