--- a/aula1/index.html
+++ b/aula1/index.html
@@ -24,19 +24,46 @@
 	<script>
 	$(document).ready(function(){
 		$(".up").click(function(){
-			var height = $(window).height();
-			$('html, body').animate({
-	          scrollTop: '-='+height
-	        }, 1000);
+	        scrollUp();
 		});
 		$(".down").click(function(){
-			var height = $(window).height();
-			$('html, body').animate({
-	          scrollTop: '+='+height
-	        }, 1000);
-			// window.scrollBy(0, height);
+			scrollDown();
+		});
+		$(document).keydown(function(e) {
+	    	switch(e.which) {
+		        case 37:
+		        scrollUp();
+		        break;
+
+		        case 38:
+		        scrollUp();
+		        break;
+
+		        case 39:
+		        scrollDown();
+		        break;
+
+		        case 40:
+		        scrollDown();
+		        break;
+
+		        default: return; // exit this handler for other keys
+			}
+		    e.preventDefault(); // prevent the default action (scroll / move caret)
 		});
 	});
+	function scrollUp() {
+		var height = $(window).height();
+		$('html, body').animate({
+          scrollTop: '-='+height
+        }, 1000);
+	}
+	function scrollDown() {
+		var height = $(window).height();
+		$('html, body').animate({
+          scrollTop: '+='+height
+        }, 1000);
+	}
     </script>
 </head>
 <body>
