--- a/2_estrutura/index.html
+++ b/2_estrutura/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif|PT+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="/./css/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>HTML 101 - Aula #1</title>
+	<title>HTML 101 - Aula #2</title>
 	<script src="../js/jquery-3.1.1.min.js"></script>
 	<script src="../js/scroll.js"></script>
 </head>
 <body>
 	<main>
 		<section class="first">
+		<a href="javascript:" title='1_termos' class="prev">Parte 1: Estrutura</a>
 			<div class="content">
-				<h1>Agradecimentos</h1>
+				<h1>Estruturando o HTML</h1>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
 		</section>
 		<section>
 			<div class="content">
-				<p>Esses módulos de aulas foram feitos com auxílio de um guia feito por Shay Howe. Thanks Shay 👍</p>
-				<img src="https://www.thatconference.com/cloud/profilephotos/Shay-Howe-72a38ea3-9dc6-4312-bdea-0201ef408119.png" style="width: 40%; height: 40%; display: block; border-radius: 50%; margin-top: 40px;">
+				<p>Todos os documentos HTML precisam ter uma estrutura obrifatória que inclui as seguites declarações e elementos:</p>
+				<code>
+					<span class="tag">&lt;!DOCTYPE html></span>, <span class="tag">&lt;html></span>, <span class="tag">&lt;head></span>, and <span class="tag">&lt;body></span>
+				</code>
+
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
