--- a/2_estrutura/index.html
+++ b/2_estrutura/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif|PT+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="/./css/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>HTML 101 - Aula #2</title>
 	<script src="../js/jquery-3.1.1.min.js"></script>
