Included more content on the second lesson

--- a/1_termos/index.html
+++ b/1_termos/index.html
@@ -10,6 +10,7 @@
 <body>
 	<main>
 		<section class="first">
+		<a class="prev" title="1_termos" href="javascript:" style="display: none;"></a>
 			<div class="content">
 				<h1>Agradecimentos</h1>
 			</div>
@@ -18,7 +19,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Esses módulos de aulas foram feitos com auxílio de um guia feito por Shay Howe. Thanks Shay 👍</p>
+				<p>Essas aulas foram montadas por mim (Hudson ) mas com auxílio de um guia feito por Shay Howe. Thanks Shay 👍</p>
 				<img src="https://www.thatconference.com/cloud/profilephotos/Shay-Howe-72a38ea3-9dc6-4312-bdea-0201ef408119.png" style="width: 40%; height: 40%; display: block; border-radius: 50%; margin-top: 40px;">
 			</div>
 			<div class="up"><span>↑</span></div>
@@ -116,13 +117,6 @@
 					<span class="attribute">id="</span><span class="value">link</span><span class="attribute">"</span> <span class="attribute">class="</span><span class="value">menu</span><span class="attribute">" href="</span><span class="value">http://movile.com</span><span class="attribute">"</span><span class="tag">&gt;</span> Movile <span class="tag">&lt;/a&gt;</span>
 					<br><br>
 					<a href="http://movile.com" target="_blank">Movile</a>
-				</code>
-				<p>
-				</p>
-				<code>
-					<span class="tag">&lt;img</span> <span class="attribute"> src="</span><span class="value">img/foto.png</span><span class="attribute">"</span><span class="tag">&gt;</span>
-					<br><br>
-					<img src="https://fillmurray.com/50/50" style="width: 50px; height: 50px; margin-left: 10px;">
 				</code>
 
 				<a href="javascript:" title='2_estrutura' class="next">Parte 2: Estrutura</a>
