--- a/2_estrutura/index.html
+++ b/2_estrutura/index.html
@@ -6,6 +6,7 @@
 	<title>HTML 101 - Aula #2</title>
 	<script src="../js/jquery-3.1.1.min.js"></script>
 	<script src="../js/scroll.js"></script>
+	<script src="../js/scroll.js"></script>
 </head>
 <body>
 	<main>
