--- a/2_estrutura/index.html
+++ b/2_estrutura/index.html
@@ -14,7 +14,7 @@
 <body>
 	<main>
 		<section class="first">
-		<a href="javascript:" title='1_termos' class="prev">Parte 1: Estrutura</a>
+		<a href="javascript:" title='1_termos' class="prev">Parte 1: Termos</a>
 			<div class="content">
 				<h1>Estruturando o HTML</h1>
 			</div>
