new lock and unlock scroll function

--- a/2_estrutura/index.html
+++ b/2_estrutura/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif|PT+Sans" rel="stylesheet">
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="../css/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>HTML 101 - Aula #2</title>
@@ -8,6 +9,7 @@
 	<script src="../js/scroll.js"></script>
 </head>
 <body>
+	<div class="lock-scroll lock"></div>
 	<main>
 		<section class="first">
 		<a href="javascript:" title='1_termos' class="prev">Parte 1: Termos</a>
@@ -52,7 +54,7 @@
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
 		</section>
-		<section>
+		<section id="exemplo">
 			<div class="content">
 				<code>
 					<span class="tag">&lt;!DOCTYPE html></span>
@@ -68,6 +70,7 @@
 					<br><span class="tag">&lt;/html></span>
 					</pre>
 				</code>
+				<a href="exemplo.html">exemplo</a>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
