--- a/teste/index.html
+++ b/teste/index.html
@@ -26,7 +26,7 @@
 					<span class="tag">&lt;!DOCTYPE html></span>, <span class="tag">&lt;html></span>, <span class="tag">&lt;head></span>, and <span class="tag">&lt;body></span>
 				</code>
 				<p>A primeira linha de todo documento HTML deve declarar o tipo de documento para que o browser saiba o que precisa ler. Se a versão for a última basta &lt;!DOCTYPE html>, senão podemos declarar a versão e depois disso, abrimos a tag &lt;html>.</p>
-				<simpla-text class="simpla-example" editable="" contenteditable="" inline="" style="min-width: 0px;"><br></simpla-text>
+				<simpla-text class="simpla-example" editable="" contenteditable="" inline="" style="min-width: 0px;"></simpla-text>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
