--- a/1_termos/index.html
+++ b/1_termos/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif|PT+Sans" rel="stylesheet">
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="../css/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>HTML 101 - Aula #1</title>
