added lock-unlock on the first lesson

--- a/1_termos/index.html
+++ b/1_termos/index.html
@@ -9,6 +9,7 @@
 	<script src="../js/scroll.js"></script>
 </head>
 <body>
+	<div class="lock-scroll lock"></div>
 	<main>
 		<section class="first">
 		<a class="prev" title="1_termos" href="javascript:" style="display: none;"></a>
