joines 2 html modules in 1 lesson and added lesson 2 as CSS

--- a/2_CSS/index.html
+++ b/2_CSS/index.html
@@ -12,7 +12,7 @@
 	<div class="lock-scroll lock"></div>
 	<main>
 		<section class="first">
-		<a href="javascript:" title='1_termos' class="prev">Parte 1: Termos</a>
+		<a href="javascript:" title='1_termos' class="prev">Parte 1: HTML</a>
 			<div class="content">
 				<h1>Estruturando o HTML</h1>
 			</div>
@@ -49,35 +49,6 @@
 
 		<section>
 			<div class="content">
-				<h1>Estrutura básica</h1>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-		<section id="exemplo">
-			<div class="content">
-				<code>
-					<span class="tag">&lt;!DOCTYPE html></span>
-					<br><span class="tag">&lt;html</span> <span class="attribute">lang="</span></span><span class="value">en</span><span class="attribute">"</span><span class="tag">></span>
-					<br><span class="tag">&lt;head></span>
-					    <br><span class="tag">&lt;meta</span> <span class="attribute">charset="</span><span class="value">utf-8</span><span class="attribute">"</span><span class="tag">></span>
-					    <br><span class="tag">&lt;title></span>Hello World<span class="tag">&lt;/title></span>
-					  <br><span class="tag">&lt;/head></span>
-					  <br><span class="tag">&lt;body></span>
-					    <br><span class="tag">&lt;h1></span>Hello World<span class="tag">&lt;/h1></span>
-					    <br><span class="tag">&lt;p></span>This is a web page<span class="tag">&lt;/p></page>
-					  <br><span class="tag">&lt;/body></span>
-					<br><span class="tag">&lt;/html></span>
-					</pre>
-				</code>
-				<a href="exemplo.html">exemplo</a>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-
-		<section>
-			<div class="content">
 				<h1>elementos<br>"Self-closing"</h1>
 			</div>
 			<div class="up"><span>↑</span></div>
@@ -85,7 +56,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Nem todas as tags que são usadas precisam de encerramento, algumas delas tem todo conteúdo necessário apenas nos atributos ou nem precisam disso também. As mais comuns entre as self-closing são:</p>
+				<p>Nem todas as tags que são usadas precisam de encerramento, algumas delas têm todo conteúdo necessário apenas nos atributos ou nem precisam disso também. As mais comuns entre as self-closing são:</p>
 				<code>
 					Dentro do <span class="tag">&lt;head&gt;</span>
 					<br>
@@ -104,6 +75,36 @@
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
 		</section>
+
+		<section>
+			<div class="content">
+				<h1>Estrutura básica</h1>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+		<section id="exemplo">
+			<div class="content">
+				<code>
+					<span class="tag">&lt;!DOCTYPE html></span>
+					<br><span class="tag">&lt;html</span> <span class="attribute">lang="</span></span><span class="value">en</span><span class="attribute">"</span><span class="tag">></span>
+					<br><span class="tag">&lt;head></span>
+					    <br><span class="tag">&lt;meta</span> <span class="attribute">charset="</span><span class="value">utf-8</span><span class="attribute">"</span><span class="tag">></span>
+					    <br><span class="tag">&lt;title></span>Hello World<span class="tag">&lt;/title></span>
+					  <br><span class="tag">&lt;/head></span>
+					  <br><span class="tag">&lt;body></span>
+					    <br><span class="tag">&lt;h1></span>Hello World<span class="tag">&lt;/h1></span>
+					    <br><span class="tag">&lt;p></span>Aula linda do André e do Hudson 😍<span class="tag">&lt;/p></page>
+					  <br><span class="tag">&lt;/body></span>
+					<br><span class="tag">&lt;/html></span>
+					</pre>
+				</code>
+				<a href="exemplo.html">exemplo</a>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+
 	</main>
 </body>
 </html>
