--- a/1_HTML/exemplo.html
+++ b/1_HTML/exemplo.html
@@ -6,7 +6,7 @@
 	</head> 
 	<body> 
 		<h1>Hello World</h1> 
-		<p>This is a web page</p>
+		<p>Aula linda do André e do Hudson 😍</p>
 		<a href="index.html#exemplo">< Voltar</a>
 	</body> 
 </html>
