--- a/1_HTML/index.html
+++ b/1_HTML/index.html
@@ -12,7 +12,7 @@
 	<div class="lock-scroll lock"></div>
 	<main>
 		<section class="first">
-		<a class="prev" title="1_termos" href="javascript:" style="display: none;"></a>
+		<a class="prev" title="1_HTML" href="javascript:" style="display: none;"></a>
 			<div class="content">
 				<h1>Agradecimentos</h1>
 			</div>
@@ -21,7 +21,7 @@
 		</section>
 		<section>
 			<div class="content">
-				<p>Essas aulas foram montadas por mim (Hudson ) mas com auxílio de um guia feito por Shay Howe. Thanks Shay 👍</p>
+				<p>Essas aulas foram montadas por nós (Hudson e André) mas com auxílio de um guia feito por Shay Howe. Thanks Shay 👍</p>
 				<img src="https://www.thatconference.com/cloud/profilephotos/Shay-Howe-72a38ea3-9dc6-4312-bdea-0201ef408119.png" style="width: 40%; height: 40%; display: block; border-radius: 50%; margin-top: 40px;">
 			</div>
 			<div class="up"><span>↑</span></div>
@@ -120,9 +120,101 @@
 					<br><br>
 					<a href="http://movile.com" target="_blank">Movile</a>
 				</code>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
 
-				<a href="javascript:" title='2_estrutura' class="next">Parte 2: Estrutura</a>
+		<section class="first">
+			<div class="content">
+				<h1>Estruturando o HTML</h1>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+		<section>
+			<div class="content">
+				<p>Todos os documentos HTML precisam ter uma estrutura obrifatória que inclui as seguites declarações e elementos:</p>
+				<code>
+					<span class="tag">&lt;!DOCTYPE html></span>, <span class="tag">&lt;html></span>, <span class="tag">&lt;head></span>, and <span class="tag">&lt;body></span>
+				</code>
+				<p>A primeira linha de todo documento HTML deve declarar o tipo de documento para que o browser saiba o que precisa ler. Se a versão for a última basta &lt;!DOCTYPE html>, senão podemos declarar a versão e depois disso, abrimos a tag &lt;html>.</p>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
 
+		<section class="first">
+			<div class="content">
+				<h1>&lt;head> e &lt;body></h1>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+		<section>
+			<div class="content">
+				<p>Dentro do &lt;html>, primeiro criamos o elemento &lt;head> (cabeça). Tudo que vai dentro dessa tag não aparece na página propriamente dita. As informaçoes que são colocadas aqui são adicionais para a página: Título (que fica na barra do navegador), metadados que ajudam a encontrar a página e links de arquivos externos, como .css e .js, por exemplo.</p>
+				<p>Todo conteúdo que é visível na página está dentro do &lt;body> (corpo). Isso inclui títulos, parágrafos, tabelas, imagens, menus e outros elementos.</p>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+
+		<section>
+			<div class="content">
+				<h1>elementos<br>"Self-closing"</h1>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+		<section>
+			<div class="content">
+				<p>Nem todas as tags que são usadas precisam de encerramento, algumas delas têm todo conteúdo necessário apenas nos atributos ou nem precisam disso também. As mais comuns entre as self-closing são:</p>
+				<code>
+					Dentro do <span class="tag">&lt;head&gt;</span>
+					<br>
+					<span class="tag">&lt;meta&gt;</span>
+					<span class="tag">&lt;link&gt;</span>
+					<br><br>
+					Dentro do <span class="tag">&lt;body&gt;</span>
+					<br>
+					<span class="tag">&lt;br&gt;</span>
+					<span class="tag">&lt;img&gt;</span>
+					<span class="tag">&lt;hr&gt;</span>
+					<span class="tag">&lt;source&gt;</span>
+				</code>
+
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+
+		<section>
+			<div class="content">
+				<h1>Estrutura básica</h1>
+			</div>
+			<div class="up"><span>↑</span></div>
+			<div class="down"><span>↑</span></div>
+		</section>
+		<section id="exemplo">
+			<div class="content">
+				<code>
+					<span class="tag">&lt;!DOCTYPE html></span>
+					<br><span class="tag">&lt;html</span> <span class="attribute">lang="</span></span><span class="value">en</span><span class="attribute">"</span><span class="tag">></span>
+					<br><span class="tag">&lt;head></span>
+					    <br><span class="tag">&lt;meta</span> <span class="attribute">charset="</span><span class="value">utf-8</span><span class="attribute">"</span><span class="tag">></span>
+					    <br><span class="tag">&lt;title></span>Hello World<span class="tag">&lt;/title></span>
+					  <br><span class="tag">&lt;/head></span>
+					  <br><span class="tag">&lt;body></span>
+					    <br><span class="tag">&lt;h1></span>Hello World<span class="tag">&lt;/h1></span>
+					    <br><span class="tag">&lt;p></span>Aula linda do André e do Hudson 😍<span class="tag">&lt;/p></page>
+					  <br><span class="tag">&lt;/body></span>
+					<br><span class="tag">&lt;/html></span>
+					</pre>
+				</code>
+				<a href="exemplo.html">exemplo</a>
+
+				<a href="javascript:" title='2_CSS' class="next">Parte 2: CSS</a>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
