--- a/2_xau/index.html
+++ b/2_xau/index.html
@@ -12,7 +12,7 @@
 	<div class="lock-scroll lock"></div>
 	<main>
 		<section class="first">
-		<a href="javascript:" title='1_termos' class="prev">Parte 1: HTML</a>
+		<a href="javascript:" title='1_html' class="prev">Parte 1: HTML</a>
 			<div class="content">
 				<h1>Estruturando o HTML</h1>
 			</div>
