--- a/1_html/index.html
+++ b/1_html/index.html
@@ -12,7 +12,7 @@
 	<div class="lock-scroll lock"></div>
 	<main>
 		<section class="first">
-		<a class="prev" title="1_HTML" href="javascript:" style="display: none;"></a>
+		<a class="prev" title="1_html" href="javascript:" style="display: none;"></a>
 			<div class="content">
 				<h1>Agradecimentos</h1>
 			</div>
@@ -214,7 +214,7 @@
 				</code>
 				<a href="exemplo.html">exemplo</a>
 
-				<a href="javascript:" title='2_CSS' class="next">Parte 2: CSS</a>
+				<a href="javascript:" title='2_css' class="next">Parte 2: CSS</a>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
