changed the page titles

--- a/2_css/index.html
+++ b/2_css/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="../css/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>HTML 101 - Aula #2</title>
+	<title>HTML + CSS 101</title>
 	<script src="../js/jquery-3.1.1.min.js"></script>
 	<script src="../js/scroll.js"></script>
 </head>
@@ -14,7 +14,7 @@
 		<section class="first">
 		<a href="javascript:" title='1_html' class="prev">Parte 1: HTML</a>
 			<div class="content">
-				<h1>Estruturando o HTML</h1>
+				<h1>Cascade Style Sheet</h1>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
@@ -31,7 +31,7 @@
 			<div class="down"><span>↑</span></div>
 		</section>
 
-		<section class="first">
+		<section>
 			<div class="content">
 				<h1>&lt;head> e &lt;body></h1>
 			</div>
@@ -42,64 +42,6 @@
 			<div class="content">
 				<p>Dentro do &lt;html>, primeiro criamos o elemento &lt;head> (cabeça). Tudo que vai dentro dessa tag não aparece na página propriamente dita. As informaçoes que são colocadas aqui são adicionais para a página: Título (que fica na barra do navegador), metadados que ajudam a encontrar a página e links de arquivos externos, como .css e .js, por exemplo.</p>
 				<p>Todo conteúdo que é visível na página está dentro do &lt;body> (corpo). Isso inclui títulos, parágrafos, tabelas, imagens, menus e outros elementos.</p>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-
-		<section>
-			<div class="content">
-				<h1>elementos<br>"Self-closing"</h1>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-		<section>
-			<div class="content">
-				<p>Nem todas as tags que são usadas precisam de encerramento, algumas delas têm todo conteúdo necessário apenas nos atributos ou nem precisam disso também. As mais comuns entre as self-closing são:</p>
-				<code>
-					Dentro do <span class="tag">&lt;head&gt;</span>
-					<br>
-					<span class="tag">&lt;meta&gt;</span>
-					<span class="tag">&lt;link&gt;</span>
-					<br><br>
-					Dentro do <span class="tag">&lt;body&gt;</span>
-					<br>
-					<span class="tag">&lt;br&gt;</span>
-					<span class="tag">&lt;img&gt;</span>
-					<span class="tag">&lt;hr&gt;</span>
-					<span class="tag">&lt;source&gt;</span>
-				</code>
-
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-
-		<section>
-			<div class="content">
-				<h1>Estrutura básica</h1>
-			</div>
-			<div class="up"><span>↑</span></div>
-			<div class="down"><span>↑</span></div>
-		</section>
-		<section id="exemplo">
-			<div class="content">
-				<code>
-					<span class="tag">&lt;!DOCTYPE html></span>
-					<br><span class="tag">&lt;html</span> <span class="attribute">lang="</span></span><span class="value">en</span><span class="attribute">"</span><span class="tag">></span>
-					<br><span class="tag">&lt;head></span>
-					    <br><span class="tag">&lt;meta</span> <span class="attribute">charset="</span><span class="value">utf-8</span><span class="attribute">"</span><span class="tag">></span>
-					    <br><span class="tag">&lt;title></span>Hello World<span class="tag">&lt;/title></span>
-					  <br><span class="tag">&lt;/head></span>
-					  <br><span class="tag">&lt;body></span>
-					    <br><span class="tag">&lt;h1></span>Hello World<span class="tag">&lt;/h1></span>
-					    <br><span class="tag">&lt;p></span>Aula linda do André e do Hudson 😍<span class="tag">&lt;/p></page>
-					  <br><span class="tag">&lt;/body></span>
-					<br><span class="tag">&lt;/html></span>
-					</pre>
-				</code>
-				<a href="exemplo.html">exemplo</a>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
