--- a/1_html/index.html
+++ b/1_html/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="../css/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<title>HTML 101 - Aula #1</title>
+	<title>HTML + CSS 101</title>
 	<script src="../js/jquery-3.1.1.min.js"></script>
 	<script src="../js/scroll.js"></script>
 </head>
