switched lesson 2 for more html

--- a/1_html/index.html
+++ b/1_html/index.html
@@ -214,7 +214,7 @@
 				</code>
 				<a href="exemplo.html">exemplo</a>
 
-				<a href="javascript:" title='2_css' class="next">Parte 2: CSS</a>
+				<a href="javascript:" title='2_html' class="next">Parte 2: CSS</a>
 			</div>
 			<div class="up"><span>↑</span></div>
 			<div class="down"><span>↑</span></div>
